No need to specify path in a separate cell
Specify path and image_path(for augmentations) within vision_ui

--- a/01_UI_Fastai.ipynb
+++ b/01_UI_Fastai.ipynb
@@ -28,20 +28,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "path = Path('./data/airplanes')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d5041f2f6604ecfab32a6252b5eb4bb",
+       "model_id": "a5d0d590f35b4ced8c98d3cd4d58ed8c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -54,15 +45,8 @@
     }
    ],
    "source": [
-    "display_ui(path)"
+    "display_ui()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
