--- a/01_UI_Fastai.ipynb
+++ b/01_UI_Fastai.ipynb
@@ -18,26 +18,23 @@
     "from fastai.vision import *\n",
     "from fastai.widgets import *\n",
     "\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
-    "\n",
     "from vision_ui import*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a5d0d590f35b4ced8c98d3cd4d58ed8c",
+       "model_id": "26685ad89c514fa889931c33f761d56f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Tab(children=(Output(), Output(), Output(), Output(), Output(), Output(), Output()), _titles={'0': 'Info', '1'…"
+       "Tab(children=(Output(), Output(), Output(), Output(), Output(), Output(), Output(), Output()), _titles={'0': '…"
       ]
      },
      "metadata": {},
